[gd_scene load_steps=8 format=3 uid="uid://cywaob6jab2pj"]

[ext_resource type="LabelSettings" uid="uid://cc2vi4onhgmnw" path="res://theme_base/label/label_settings_bold.tres" id="1_6o6h0"]
[ext_resource type="Script" uid="uid://ciy03xjqjdkwp" path="res://src/screens/settings/general/general_settings.gd" id="1_gl78q"]
[ext_resource type="PackedScene" uid="uid://djrvl8pvkr7aa" path="res://src/screens/settings/language_picker/language_picker.tscn" id="2_p1exx"]
[ext_resource type="Script" uid="uid://cnyyowwlb04kl" path="res://src/ui_components/base/defaults/default_button.gd" id="3_n2piq"]
[ext_resource type="PackedScene" uid="uid://b2mwv4cl5sm6t" path="res://src/ui_components/base/swtich_option_button/switch_option_button.tscn" id="4_1qk6n"]
[ext_resource type="PackedScene" uid="uid://can4wvc3g3b84" path="res://src/screens/settings/theme_picker/theme_picker.tscn" id="6_ryj47"]

[sub_resource type="ButtonGroup" id="ButtonGroup_1qk6n"]

[node name="General" type="VBoxContainer"]
anchors_preset = -1
anchor_right = 0.47175
anchor_bottom = 0.917444
offset_right = -341.76
offset_bottom = -510.84
size_flags_horizontal = 3
theme_override_constants/separation = 15
script = ExtResource("1_gl78q")
metadata/_edit_use_anchors_ = true

[node name="Version" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Version"]
layout_mode = 2
size_flags_horizontal = 3
text = "Version"

[node name="VersionLabel" type="Label" parent="Version"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
size_flags_horizontal = 3
text = "v1.0.0"
horizontal_alignment = 2

[node name="LanguageLabel" type="Label" parent="."]
layout_mode = 2
text = "Language"
label_settings = ExtResource("1_6o6h0")

[node name="Langauge" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15

[node name="LanguagePicker" parent="Langauge" instance=ExtResource("2_p1exx")]
layout_mode = 2
alignment = 0

[node name="TranslationsLink" type="RichTextLabel" parent="Langauge"]
layout_mode = 2
bbcode_enabled = true
text = "You can fix errors or add new languages on [url]weblate.org[/url]"
fit_content = true
scroll_active = false

[node name="FormatsLabel" type="Label" parent="."]
layout_mode = 2
text = "Formats"
label_settings = ExtResource("1_6o6h0")

[node name="Formats" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Dates" type="HBoxContainer" parent="Formats"]
layout_mode = 2

[node name="DatesLabel" type="Label" parent="Formats/Dates"]
layout_mode = 2
size_flags_horizontal = 3
text = "Dates"

[node name="DatesOptionsButton" parent="Formats/Dates" instance=ExtResource("4_1qk6n")]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 30)
layout_mode = 2

[node name="Currencies" type="HBoxContainer" parent="Formats"]
layout_mode = 2

[node name="CurrenciesLabel" type="Label" parent="Formats/Currencies"]
layout_mode = 2
size_flags_horizontal = 3
text = "Currencies"

[node name="CurrenciesOptionsButton" parent="Formats/Currencies" instance=ExtResource("4_1qk6n")]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 30)
layout_mode = 2

[node name="FormatsExample" type="HBoxContainer" parent="Formats"]
layout_mode = 2

[node name="FormatsExampleLabel" type="Label" parent="Formats/FormatsExample"]
auto_translate_mode = 2
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Example"

[node name="FormatsExample" type="Label" parent="Formats/FormatsExample"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
text = "31.12.00 - 1234â‚¬"

[node name="Audio" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="AudioLabel" type="Label" parent="Audio"]
layout_mode = 2
text = "Audio"
label_settings = ExtResource("1_6o6h0")

[node name="UISfx" type="HBoxContainer" parent="Audio"]
layout_mode = 2

[node name="UISfxVolumeLabel" type="Label" parent="Audio/UISfx"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sfx volume"

[node name="UISfxVolumeSlider" type="HSlider" parent="Audio/UISfx"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
min_value = -60.0
max_value = 0.0
step = 5.0

[node name="Interface" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="IterfaceLabel" type="Label" parent="Interface"]
layout_mode = 2
text = "Interface settings"
label_settings = ExtResource("1_6o6h0")

[node name="FontSize" type="HBoxContainer" parent="Interface"]
visible = false
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Interface/FontSize"]
layout_mode = 2
size_flags_horizontal = 3
text = "Font size"

[node name="FontSizeSpinBox" type="SpinBox" parent="Interface/FontSize"]
unique_name_in_owner = true
layout_mode = 2
min_value = 8.0
max_value = 42.0
value = 18.0
alignment = 2

[node name="FontDefaultButton" type="Button" parent="Interface/FontSize"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Default"
script = ExtResource("3_n2piq")

[node name="ThemePicker" parent="Interface" instance=ExtResource("6_ryj47")]
unique_name_in_owner = true
layout_mode = 2
show_custom = false

[node name="Scale" type="HBoxContainer" parent="Interface"]
layout_mode = 2

[node name="Label" type="Label" parent="Interface/Scale"]
layout_mode = 2
size_flags_horizontal = 3
text = "Scale"

[node name="Scale1" type="Button" parent="Interface/Scale"]
unique_name_in_owner = true
auto_translate_mode = 2
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
button_group = SubResource("ButtonGroup_1qk6n")
text = "75%"
script = ExtResource("3_n2piq")

[node name="Scale2" type="Button" parent="Interface/Scale"]
unique_name_in_owner = true
auto_translate_mode = 2
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
button_group = SubResource("ButtonGroup_1qk6n")
text = "100%"
script = ExtResource("3_n2piq")

[node name="Scale3" type="Button" parent="Interface/Scale"]
unique_name_in_owner = true
auto_translate_mode = 2
visible = false
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Coming soon"
tooltip_auto_translate_mode = 1
disabled = true
toggle_mode = true
button_group = SubResource("ButtonGroup_1qk6n")
text = "125%"
script = ExtResource("3_n2piq")

[node name="ScreenFade" type="HBoxContainer" parent="Interface"]
layout_mode = 2

[node name="Label" type="Label" parent="Interface/ScreenFade"]
layout_mode = 2
size_flags_horizontal = 3
text = "Screen fade animation"

[node name="ScreenFadeButton" type="CheckButton" parent="Interface/ScreenFade"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="meta_clicked" from="Langauge/TranslationsLink" to="." method="_on_translations_link_meta_clicked"]
[connection signal="item_selected" from="Formats/Dates/DatesOptionsButton" to="." method="_on_dates_options_button_item_selected"]
[connection signal="item_selected" from="Formats/Currencies/CurrenciesOptionsButton" to="." method="_on_currencies_options_button_item_selected"]
[connection signal="drag_ended" from="Audio/UISfx/UISfxVolumeSlider" to="." method="_on_ui_sfx_volume_slider_drag_ended"]
[connection signal="value_changed" from="Interface/FontSize/FontSizeSpinBox" to="." method="_on_font_size_spin_box_value_changed"]
[connection signal="pressed" from="Interface/FontSize/FontDefaultButton" to="." method="_on_font_default_button_pressed"]
[connection signal="pressed" from="Interface/Scale/Scale1" to="." method="_on_scale_1_pressed"]
[connection signal="pressed" from="Interface/Scale/Scale2" to="." method="_on_scale_2_pressed"]
[connection signal="pressed" from="Interface/Scale/Scale3" to="." method="_on_scale_3_pressed"]
[connection signal="toggled" from="Interface/ScreenFade/ScreenFadeButton" to="." method="_on_screen_fade_button_toggled"]
